fixed sections overlapped problem and changed the color scheme

--- a/web-v1/src/App.css
+++ b/web-v1/src/App.css
@@ -86,7 +86,8 @@
 body {
   /* background-color: aqua; */
   /* background-color: #CACD73; */
-  background-color: #E6F0ED;
+  /* background-color: #E6F0ED; */
+  background-color: #101522;
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   color: rgb(53, 53, 53);
